# desmospy

./: LICENSE  README.ipynb  README.md  pyproject.toml
examples/: function-loop-xor.htm  function-loop-xor.ipynb
examples/fourier-script-ohio/: README.md  fourier-script-ohio.csv  fourier-script-ohio.htm  fourier-script-ohio.ipynb
examples/fourier-shapes/: README.md  fourier-shapes.htm  fourier-shapes.ipynb
src/desmospy/: __init__.py
