[project]
name = "desmospy"
version = "0.0.1"
authors = [
  { name="Tim DeChant", email="145816069+timdechant@users.noreply.github.com" },
]
description = "pythonic desmos"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/timdechant/desmospy"
Issues = "https://github.com/timdechant/desmospy/issues"